--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
 
     <div class="note">
-      <strong>Catatan:</strong> Pengambilan SKL dilakukan mulai tanggal 10 Juni 2025 di ruang Tata Usaha, pukul 08.00 - 12.00 WIB.
+      <strong>Catatan:</strong> Selamat Melanjutkan Kejenjang yang Lebih Tinggi, semoga semakin SUKSES.
     </div>
   </main>
 
