--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <body>
 
   <header>
-    <h1>Pengumuman Kelulusan</h1>
+    <h1>Pengumuman Kelulusan SDN SIDOMUKTI 01 </h1>
     <p>Siswa Kelas 6 - Tahun Ajaran 2024/2025</p>
   </header>
 
